src/test/ui/derives/derives-span-Eq-struct.stderr
error[E0277]: the trait bound `Error: Eq` is not satisfied
  --> $DIR/derives-span-Eq-struct.rs:8:5
   |
LL |     x: Error
   |     ^^^^^^^^ the trait `Eq` is not implemented for `Error`
   | 
  ::: $SRC_DIR/core/src/cmp.rs:LL:COL
   |
LL | pub struct AssertParamIsEq<T: Eq + ?Sized> {
   |                               -- required by this bound in `AssertParamIsEq`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
